Feat(Fakultas): Get data foto kegiatan dan files

--- a/fakultas/dashboard-fakultas.html
+++ b/fakultas/dashboard-fakultas.html
@@ -2065,7 +2065,7 @@
                               <th>Foto</th>
                             </tr>
                           </thead>
-                          <tbody></tbody>
+                          <tbody id="dokumentasi"></tbody>
                         </table>
                       </div>
                     </div>
@@ -2276,7 +2276,7 @@
                               <th>Tanggal Upload</th>
                             </tr>
                           </thead>
-                          <tbody></tbody>
+                          <tbody id="filesprodi"></tbody>
                         </table>
                       </div>
                     </div>
