--- a/fakultas/dashboard-fakultas.html
+++ b/fakultas/dashboard-fakultas.html
@@ -1456,68 +1456,51 @@
               </div>
             </li>
             <!-- ends: .nav-flag-select -->
-            <li class="nav-author">
+            <li id="nav-author" class="nav-author">
               <div class="dropdown-custom">
-                <a href="javascript:;" class="nav-item-toggle"
-                  ><img
-                    src="../img/author-nav.jpg"
-                    alt=""
-                    class="rounded-circle"
-                  />
-                  <span class="nav-item__title"
-                    >Danial<i class="las la-angle-down nav-item__arrow"></i
-                  ></span>
-                </a>
-                <div class="dropdown-parent-wrapper">
-                  <div class="dropdown-wrapper">
-                    <div class="nav-author__info">
-                      <div class="author-img">
-                        <img
-                          src="../img/author-nav.jpg"
-                          alt=""
-                          class="rounded-circle"
-                        />
-                      </div>
-                      <div>
-                        <h6>Rabbi Islam Rony</h6>
-                        <span>UI Designer</span>
-                      </div>
+                 <a href="javascript:;"  class="nav-item-toggle"><img id="navItemPhoto" src=""  alt="User Photo" class="rounded-circle">
+                    <span class="nav-item__title">Danial<i class="las la-angle-down nav-item__arrow"></i></span>
+                 </a>
+                 <div class="dropdown-parent-wrapper">
+                    <div class="dropdown-wrapper">
+                       <div class="nav-author__info">
+                          <div class="author-img">
+                             <img src="../img/author-nav.jpg" alt="" class="rounded-circle">
+                          </div>
+                          <div>
+                             <h6 class="nav-item_nama">nama_user</h6>
+                             <span class="nav-item_level">nama_level</span>
+                             <br>
+                             <span class="nav_email">email</span>
+
+                          </div>
+                       </div>
+                       <div class="nav-author__options">
+                          <ul>
+                             <li>
+                                <a href="">
+                                   <i class="uil uil-user"></i> Profile</a>
+                             </li>
+                             <li>
+                                <a href="">
+                                   <i class="uil uil-setting"></i>
+                                   Settings</a>
+                             </li>
+                            
+                             <li>
+                                <a href="">
+                                   <i class="uil uil-bell"></i> Help</a>
+                             </li>
+                          </ul>
+                          <a href="" class="nav-author__signout">
+                             <i class="uil uil-sign-out-alt"></i> Sign Out</a>
+                       </div>
                     </div>
-                    <div class="nav-author__options">
-                      <ul>
-                        <li>
-                          <a href=""> <i class="uil uil-user"></i> Profile</a>
-                        </li>
-                        <li>
-                          <a href="">
-                            <i class="uil uil-setting"></i>
-                            Settings</a
-                          >
-                        </li>
-                        <li>
-                          <a href="">
-                            <i class="uil uil-key-skeleton"></i> Billing</a
-                          >
-                        </li>
-                        <li>
-                          <a href="">
-                            <i class="uil uil-users-alt"></i> Activity</a
-                          >
-                        </li>
-                        <li>
-                          <a href=""> <i class="uil uil-bell"></i> Help</a>
-                        </li>
-                      </ul>
-                      <a href="" class="nav-author__signout">
-                        <i class="uil uil-sign-out-alt"></i> Sign Out</a
-                      >
-                    </div>
-                  </div>
-                  <!-- ends: .dropdown-wrapper -->
-                </div>
+                    <!-- ends: .dropdown-wrapper -->
+                 </div>
               </div>
-            </li>
-            <!-- ends: .nav-author -->
+           </li>
+           <!-- ends: .nav-author -->
           </ul>
           <!-- ends: .navbar-right__menu -->
           <div class="navbar-right__mobileAction d-md-none">
