feat(date)memperbaiki untuk target waktu perbaikan di audit

--- a/auditors/pengawasan-audit-add.html
+++ b/auditors/pengawasan-audit-add.html
@@ -440,7 +440,7 @@
                                        </div>
                                        <div class="col-sm-9">
                                           <div class="with-icon">
-                                             <input class="form-control ih-medium ip-gray radius-xs b-light" id="target" >
+                                             <input class="form-control ih-medium ip-gray radius-xs b-light" id="target" type="date" >
                                           </div>
                                        </div>
                                     </div>
