--- a/pengawasan/pengawasan-audit.html
+++ b/pengawasan/pengawasan-audit.html
@@ -437,7 +437,15 @@
                               </table>
                            </div>
                         </div>
-
+                        <div class="col-12">
+                           <div class="card card-default card-md mb-4">
+                           
+                           <div class="card-body">
+                              <div id="pagination" class="dm-pagination d-flex"></div>
+                              <div id="content"></div>
+                           </div>
+                           </div>
+                        </div>  
                      </div>
                   </div>
                </div>
