--- a/pengawasan/foto_kegiatan.html
+++ b/pengawasan/foto_kegiatan.html
@@ -433,6 +433,15 @@
                                  </tbody>
                               </table>
                            </div>
+                           <div class="col-12">
+                              <div class="card card-default card-md mb-4">
+                              
+                                <div class="card-body">
+                                  <div id="pagination" class="dm-pagination d-flex"></div>
+                                  <div id="content"></div>
+                                </div>
+                              </div>
+                           </div> 
                         </div>
 
                      </div>
@@ -468,6 +477,7 @@
                      </div>
                      <!-- ends: .Footer Menu -->
                   </div>
+                   
                </div>
             </div>
          </div>
