--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -486,6 +486,12 @@
                                  </tbody>
                               </table>
                            </div>
+                           <div class="card-body">
+                              <div id="pagination" class="dm-pagination d-flex"></div>
+                              <div id="content"></div>
+                            </div>
+                          </div>
+
                         </div>
 
                      </div>
