--- a/settingsmenu/kepuasandosen.html
+++ b/settingsmenu/kepuasandosen.html
@@ -47,7 +47,7 @@
 
    <link rel="stylesheet" href="../style.css">
    <script src="../js/cihuy.js" type="module"></script>
-   <script src="untuk_auditor.js" type="module"></script>
+   <script src="kepuasandosen.js" type="module"></script>
    <!-- endinject -->
 
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
