feat(kepuasandosen): Berhasil mencoba update hasil survei kepuasan dosen

--- a/settingsmenu/kepuasandosen.html
+++ b/settingsmenu/kepuasandosen.html
@@ -348,8 +348,8 @@
                                     <div class="new-member-modal">
                                        <form id="myForm" method="post">
                                           <div class="form-group mb-20">
-                                             <label for="siklus">Siklus:</label>
-                                             <select id="siklus" class="form-control"  placeholder="Siklus">
+                                             <label for="Periode">Periode:</label>
+                                             <select id="periode" class="form-control"  placeholder="Periode">
                                              </select>
                                          </div>
                                           <div class="form-group mb-20">
@@ -390,8 +390,8 @@
                                     <div class="new-member-modal">
                                        <form id="myForm" method="post">
                                           <div class="form-group mb-20">
-                                             <label for="siklus">Siklus:</label>
-                                             <select id="siklus-update" class="form-control"  placeholder="Siklus">
+                                             <label for="Periode">Periode:</label>
+                                             <select id="periode-update" class="form-control"  placeholder="Periode">
                                              </select>
                                          </div>
                                           <div class="form-group mb-20">
