feat(kepuasanmitra): Menambahkan js kepuasan mitra dan fungsi GET kepuasan mitra

--- a/settingsmenu/kepuasanmitra.html
+++ b/settingsmenu/kepuasanmitra.html
@@ -47,7 +47,7 @@
 
    <link rel="stylesheet" href="../style.css">
    <script src="../js/cihuy.js" type="module"></script>
-   <script src="kepuasantendik.js" type="module"></script>
+   <script src="kepuasanmitra.js" type="module"></script>
    <!-- endinject -->
 
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
