feat(dokumenspmi): menambahkan field keterangan pada dokumen spmi

--- a/settingsmenu/dokumenspmi.html
+++ b/settingsmenu/dokumenspmi.html
@@ -362,6 +362,12 @@
                                              <input type="file" class="form-control"id="file"  placeholder="Judul File">
 
                                           </div>
+                                          <div class="form-group mb-20">
+                                             <Label for="judul">Keterangan :</Label>
+                                             <input type="text" class="form-control" id="keterangan" placeholder="Keterangan">
+
+                                          </div>
+                                          
                                           <div class="button-group d-flex pt-25">
 
                                              <button type="button" id="tambahDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
@@ -402,6 +408,11 @@
                                           <div class="form-group mb-20">
                                              <Label for="file">Masukkan file  :</Label>
                                              <input type="file" class="form-control"id="file-update"  placeholder="Judul File">
+
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label for="judul">Keterangan :</Label>
+                                             <input type="text" class="form-control" id="keterangan" placeholder="Keterangan">
 
                                           </div>
                                           <div class="button-group d-flex pt-25">
