--- a/settingsmenu/dokumenspmi.html
+++ b/settingsmenu/dokumenspmi.html
@@ -412,7 +412,7 @@
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label for="judul">Keterangan :</Label>
-                                             <input type="text" class="form-control" id="keterangan" placeholder="Keterangan">
+                                             <input type="text" class="form-control" id="keterangan-update" placeholder="Keterangan">
 
                                           </div>
                                           <div class="button-group d-flex pt-25">
