feat(Beritaspmi): menambahkan GET untuk berita spmi

--- a/settingsmenu/beritaspmi.html
+++ b/settingsmenu/beritaspmi.html
@@ -447,21 +447,17 @@
                                        <th>
                                           <span class="userDatatable-title">no</span>
                                        </th>
-                                       <th>
-                                          <span class="userDatatable-title">File id</span>
-                                       </th>
-                                       <th>
-                                          <span class="userDatatable-title">Periode</span>
-                                       </th>
+                                    
                                        <th>
                                           <span class="userDatatable-title">Judul</span>
                                        </th>
                                        <th>
+                                          <span class="userDatatable-title">Isi</span>
+                                       </th>
+                                       <th>
                                           <span class="userDatatable-title">Gambar</span>
                                        </th>
-                                       <th data-type="html" data-name='position'>
-                                          <span class="userDatatable-title">File</span>
-                                       </th>
+                                      
                                        <th>
                                           <span class="userDatatable-title">Tanggal</span>
                                        </th>
