feat(formberitaspmi): memperbaiki berita form spmi

--- a/settingsmenu/beritaspmi.html
+++ b/settingsmenu/beritaspmi.html
@@ -337,7 +337,7 @@
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah File Untuk Auditor</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah File Untuk Berita</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
@@ -345,18 +345,19 @@
                                  <div class="modal-body">
                                     <div class="new-member-modal">
                                        <form id="myForm" method="post">
+                                         
                                           <div class="form-group mb-20">
-                                             <label for="Periode">Periode:</label>
-                                             <select id="periode" class="form-control"  placeholder="Periode">
-                                             </select>
-                                         </div>
-                                          <div class="form-group mb-20">
-                                             <Label for="judul">Judul File :</Label>
+                                             <Label for="judul">Judul Berita :</Label>
                                              <input type="text" class="form-control" id="judul" placeholder="Judul File">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="file">Masukkan file  :</Label>
+                                             <Label for="judul">Isi Berita :</Label>
+                                             <textarea type="text" class="form-control" id="judul" placeholder="Judul File"></textarea>
+
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label for="file">Masukkan Gambar  :</Label>
                                              <input type="file" class="form-control"id="file"  placeholder="Judul File">
 
                                           </div>
