feat(beritaspmi):berhasil untuk POST data berita spmi

--- a/settingsmenu/beritaspmi.html
+++ b/settingsmenu/beritaspmi.html
@@ -348,17 +348,17 @@
                                          
                                           <div class="form-group mb-20">
                                              <Label for="judul">Judul Berita :</Label>
-                                             <input type="text" class="form-control" id="judul" placeholder="Judul File">
+                                             <input type="text" class="form-control" id="judul" placeholder="Judul Berita">
 
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label for="judul">Isi Berita :</Label>
-                                             <textarea type="text" class="form-control" id="judul" placeholder="Judul File"></textarea>
+                                             <textarea type="text" class="form-control" id="isi" placeholder="Isi Berita"></textarea>
 
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label for="file">Masukkan Gambar  :</Label>
-                                             <input type="file" class="form-control"id="file"  placeholder="Judul File">
+                                             <input type="file" class="form-control"id="file"  >
 
                                           </div>
                                           <div class="button-group d-flex pt-25">
