feat(updateberitaspmi): berhasil menambahkan berita spmi

--- a/settingsmenu/beritaspmi.html
+++ b/settingsmenu/beritaspmi.html
@@ -388,24 +388,25 @@
                                  <div class="modal-body">
                                     <div class="new-member-modal">
                                        <form id="myForm" method="post">
+                                         
                                           <div class="form-group mb-20">
-                                             <label for="Periode">Periode:</label>
-                                             <select id="periode-update" class="form-control"  placeholder="Periode">
-                                             </select>
-                                         </div>
-                                          <div class="form-group mb-20">
-                                             <Label for="judul">Judul File :</Label>
-                                             <input type="text" class="form-control" id="judul-update" placeholder="Judul File">
+                                             <Label for="judul">Judul Berita :</Label>
+                                             <input type="text" class="form-control" id="judul-update" placeholder="Judul Berita">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="file">Masukkan file  :</Label>
-                                             <input type="file" class="form-control"id="file-update"  placeholder="Judul File">
+                                             <Label for="judul">Isi Berita :</Label>
+                                             <textarea type="text" class="form-control" id="isi-update" placeholder="Isi Berita"></textarea>
+
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label for="file">Masukkan Gambar  :</Label>
+                                             <input type="file" class="form-control"id="file-update"  >
 
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
-                                             <button type="button" id="updateDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Update Data
+                                             <button type="button" id="updateDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
