feat(timspmi): perbaiki form ditimspmi

--- a/settingsmenu/timspmi.html
+++ b/settingsmenu/timspmi.html
@@ -347,13 +347,13 @@
                                        <form id="myForm" method="post">
                                          
                                           <div class="form-group mb-20">
-                                             <Label for="judul">Judul Berita :</Label>
-                                             <input type="text" class="form-control" id="judul" placeholder="Judul Berita">
+                                             <Label for="nama">Nama Lengkap :</Label>
+                                             <input type="text" class="form-control" id="nama" placeholder="Judul Berita">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="judul">Isi Berita :</Label>
-                                             <textarea type="text" class="form-control" id="isi" placeholder="Isi Berita"></textarea>
+                                             <Label for="Jabatan">Jabatan</Label>
+                                             <textarea type="text" class="form-control" id="jabatan" placeholder="Isi Berita"></textarea>
 
                                           </div>
                                           <div class="form-group mb-20">
@@ -390,13 +390,13 @@
                                        <form id="myForm" method="post">
                                          
                                           <div class="form-group mb-20">
-                                             <Label for="judul">Judul Berita :</Label>
-                                             <input type="text" class="form-control" id="judul-update" placeholder="Judul Berita">
+                                             <Label for="nama">Nama Lengkap :</Label>
+                                             <input type="text" class="form-control" id="nama-update" placeholder="Judul Berita">
 
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label for="judul">Isi Berita :</Label>
-                                             <textarea type="text" class="form-control" id="isi-update" placeholder="Isi Berita"></textarea>
+                                             <Label for="Jabatan">Jabatan</Label>
+                                             <textarea type="text" class="form-control" id="jabatan-update" placeholder="Isi Berita"></textarea>
 
                                           </div>
                                           <div class="form-group mb-20">
