--- a/settingsmenu/timspmi.html
+++ b/settingsmenu/timspmi.html
@@ -348,12 +348,12 @@
                                          
                                           <div class="form-group mb-20">
                                              <Label for="nama">Nama Lengkap :</Label>
-                                             <input type="text" class="form-control" id="nama" placeholder="Judul Berita">
+                                             <input type="text" class="form-control" id="nama" placeholder="Nama Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label for="Jabatan">Jabatan</Label>
-                                             <textarea type="text" class="form-control" id="jabatan" placeholder="Isi Berita"></textarea>
+                                             <input type="text" class="form-control" id="jabatan" placeholder="Jabatan Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
@@ -391,12 +391,12 @@
                                          
                                           <div class="form-group mb-20">
                                              <Label for="nama">Nama Lengkap :</Label>
-                                             <input type="text" class="form-control" id="nama-update" placeholder="Judul Berita">
+                                             <input type="text" class="form-control" id="nama-update" placeholder="Nama Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label for="Jabatan">Jabatan</Label>
-                                             <textarea type="text" class="form-control" id="jabatan-update" placeholder="Isi Berita"></textarea>
+                                             <input type="text" class="form-control" id="jabatan-update"  placeholder="Jabatan Lengkap">
 
                                           </div>
                                           <div class="form-group mb-20">
