feat(indikator): Mengganti untuk pilihan menjadi indikator

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -356,8 +356,8 @@
                                              <input type="text" class="form-control" placeholder="Nama Standar" id="standar">
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label>Untuk Pilihan :</Label>
-                                             <input type="text" class="form-control" placeholder="Text Singkat mewakili isi standar" id="utkpilihan">
+                                             <Label>Indikator :</Label>
+                                             <input type="text" class="form-control" placeholder="Berisikan Indikator" id="utkpilihan">
                                           </div>
                                           <div class="form-group mb-20">
                                              <label>Isi:</label>
