feat(indikatorstandar): mengganti indikator di standar di table

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -485,7 +485,7 @@
                                           <span class="userDatatable-title">Standar</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Untuk Pilihan</span>
+                                          <span class="userDatatable-title">Indikator</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title">Isi</span>
