feat(indikator): perbaikan indikator dari standar untuk yang update

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -412,8 +412,8 @@
                                              <input type="text" class="form-control" placeholder="Nama Standar" id="standar-update">
                                           </div>
                                           <div class="form-group mb-20">
-                                             <Label>Untuk Pilihan :</Label>
-                                             <input type="text" class="form-control" placeholder="Text Singkat mewakili isi standar" id="utkpilihan-update">
+                                             <Label>Indikator :</Label>
+                                             <input type="text" class="form-control" placeholder="Indikator dari standar" id="utkpilihan-update">
                                           </div>
                                           <div class="form-group mb-20">
                                              <label>Isi:</label>
