--- a/ami/standar.html
+++ b/ami/standar.html
@@ -429,10 +429,10 @@
 
                                          <div class="form-group mb-20">
                                           <div class="category-member">
-                                             <Label>Siklus :</Label>
+                                             <Label>Periode :</Label>
 
                                              <select class="js-example-basic-single js-states form-control" id="siklus-update">
-                                                <option disabled value="JAN">--Pilih Siklus--</option>
+                                                <option disabled value="JAN">--Pilih Periode--</option>
                                              </select>
                                           </div>
                                           </div>
