feat(periode): Mengganti semua siklus menjadi periode

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -250,7 +250,7 @@
                            <a href="../ami/kts.html">KTS</a>
                         </li>
                         <li class="">
-                           <a href="../ami/siklus.html">Siklus</a>
+                           <a href="../ami/siklus.html">Periode</a>
                         </li>
 
                      </ul>
@@ -373,10 +373,10 @@
 
                                          <div class="form-group mb-20">
                                           <div class="category-member">
-                                             <Label>Siklus :</Label>
+                                             <Label>Periode :</Label>
 
                                              <select class="js-example-basic-single js-states form-control" id="siklus">
-                                                <option disabled value="JAN">--Pilih Siklus--</option>
+                                                <option disabled value="JAN">--Pilih Periode--</option>
                                              </select>
                                           </div>
                                           </div>
@@ -491,7 +491,7 @@
                                           <span class="userDatatable-title">Isi</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">Siklus</span>
+                                          <span class="userDatatable-title">Periode</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title float-end">action</span>
