feat(exportstandar): hidden terlebih dahulu untuk fitur export

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -459,8 +459,8 @@
                         <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
-                                 <h4>Data Standar</h4>
-                                 <div class="adv-table-table__button">
+                                 <h4>Data Standar</h4><div><br></div>
+                                 <!-- <div class="adv-table-table__button">
                                     <div class="dropdown">
                                        <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           Export
@@ -472,7 +472,7 @@
                                           <a class="dropdown-item" href="#">print</a>
                                        </div>
                                     </div>
-                                 </div>
+                                 </div> -->
                               </div>
                               <div id="filter-form-container"></div>
                               <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
