feat(siklus): ganti semua ke periode

--- a/admins/dashboard-admins.html
+++ b/admins/dashboard-admins.html
@@ -359,7 +359,7 @@
                            <a href="../ami/kts.html">KTS</a>
                         </li>
                         <li class="">
-                           <a href="../ami/siklus.html">Siklus</a>
+                           <a href="../ami/siklus.html">Periode</a>
                         </li>
 
                      </ul>
