fix(judulfile) Ganti field nya dengan 3 yaitu laporan audit, rekomendasi, tindak lanjut

--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -354,11 +354,16 @@
                                              <select id="siklus" class="form-control" name="idSiklus" placeholder="Siklus">
                                              </select>
                                          </div>
-                                          <div class="form-group mb-20">
-                                             <Label>Judul File :</Label>
-                                             <input type="text" class="form-control" id="judul"placeholder="Judul File">
-
-                                          </div>
+                                         <div class="form-group mb-20">
+                                          <label for="judul">Judul File :</label>
+                                          <select class="form-control" id="judul">
+                                              <option value="option1">Laporan Audit</option>
+                                              <option value="option2">Rekomendasi</option>
+                                              <option value="option3">Tindak Lanjut</option>
+                                              <!-- Tambahkan opsi dropdown sesuai kebutuhan Anda -->
+                                          </select>
+                                      </div>
+                                      
                                           
                                           <div class="form-group mb-20">
                                              <Label>Masukkan File  :</Label>
