fix(periode): ganti periode di file untuk prodi atau unit

--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -350,7 +350,7 @@
                                     <div class="new-member-modal">
                                        <form id="myForm">
                                           <div class="form-group mb-20">
-                                             <label for="siklus">Siklus:</label>
+                                             <label for="siklus">Periode:</label>
                                              <select id="siklus" class="form-control" name="idSiklus" placeholder="Siklus">
                                              </select>
                                          </div>
