fix(gantivalue): ganti option menjadi nilai dari value nya

--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -357,9 +357,9 @@
                                          <div class="form-group mb-20">
                                           <label for="judul">Judul File :</label>
                                           <select class="form-control" id="judul">
-                                              <option value="option1">Laporan Audit</option>
-                                              <option value="option2">Rekomendasi</option>
-                                              <option value="option3">Tindak Lanjut</option>
+                                              <option value="Laporan Audit">Laporan Audit</option>
+                                              <option value="Rekomendasi">Rekomendasi</option>
+                                              <option value="Tindak Lanjut">Tindak Lanjut</option>
                                           </select>
                                        </div>
 
@@ -406,9 +406,9 @@
                                          <div class="form-group mb-20">
                                           <label for="judul">Judul File :</label>
                                           <select class="form-control" id="judul">
-                                              <option value="option1">Laporan Audit</option>
-                                              <option value="option2">Rekomendasi</option>
-                                              <option value="option3">Tindak Lanjut</option>
+                                              <option value="Laporan Audit">Laporan Audit</option>
+                                              <option value="Rekomendasi">Rekomendasi</option>
+                                              <option value="Tindak Lanjut">Tindak Lanjut</option>
                                           </select>
                                        </div>
                                           
