fix(untukauditor): Perbaiki juga file di untuk auditors

--- a/files/untuk_auditor.html
+++ b/files/untuk_auditor.html
@@ -352,11 +352,14 @@
                                              <select id="siklus" class="form-control"  placeholder="Siklus">
                                              </select>
                                          </div>
-                                          <div class="form-group mb-20">
-                                             <Label for="judul">Judul File :</Label>
-                                             <input type="text" class="form-control" id="judul" placeholder="Judul File">
-
-                                          </div>
+                                         <div class="form-group mb-20">
+                                          <label for="judul">Judul File :</label>
+                                          <select class="form-control" id="judul">
+                                              <option value="Laporan Audit">Laporan Audit</option>
+                                              <option value="Rekomendasi">Rekomendasi</option>
+                                              <option value="Tindak Lanjut">Tindak Lanjut</option>
+                                          </select>
+                                       </div>
                                           <div class="form-group mb-20">
                                              <Label for="file">Masukkan file  :</Label>
                                              <input type="file" class="form-control"id="file"  placeholder="Judul File">
@@ -394,11 +397,14 @@
                                              <select id="siklus-update" class="form-control"  placeholder="Siklus">
                                              </select>
                                          </div>
-                                          <div class="form-group mb-20">
-                                             <Label for="judul">Judul File :</Label>
-                                             <input type="text" class="form-control" id="judul-update" placeholder="Judul File">
-
-                                          </div>
+                                         <div class="form-group mb-20">
+                                          <label for="judul-update">Judul File :</label>
+                                          <select class="form-control" id="judul-update">
+                                              <option value="Laporan Audit">Laporan Audit</option>
+                                              <option value="Rekomendasi">Rekomendasi</option>
+                                              <option value="Tindak Lanjut">Tindak Lanjut</option>
+                                          </select>
+                                       </div>
                                           <div class="form-group mb-20">
                                              <Label for="file">Masukkan file  :</Label>
                                              <input type="file" class="form-control"id="file-update"  placeholder="Judul File">
