--- a/files/untuk_auditor.html
+++ b/files/untuk_auditor.html
@@ -353,7 +353,7 @@
                                              </select>
                                          </div>
                                          <div class="form-group mb-20">
-                                          <label for="judul">Judul File :</label>
+                                          <label for="judul">Dokumen Tindak Lanjut :</label>
                                           <select class="form-control" id="judul">
                                               <option value="Laporan Audit">Laporan Audit</option>
                                               <option value="Rekomendasi">Rekomendasi</option>
@@ -362,7 +362,7 @@
                                        </div>
                                           <div class="form-group mb-20">
                                              <Label for="file">Masukkan file  :</Label>
-                                             <input type="file" class="form-control"id="file"  placeholder="Judul File">
+                                             <input type="file" class="form-control"id="file"  placeholder="">
 
                                           </div>
                                           <div class="button-group d-flex pt-25">
@@ -398,7 +398,7 @@
                                              </select>
                                          </div>
                                          <div class="form-group mb-20">
-                                          <label for="judul-update">Judul File :</label>
+                                          <label for="judul-update">Dokumen Tindak Lanjut :</label>
                                           <select class="form-control" id="judul-update">
                                               <option value="Laporan Audit">Laporan Audit</option>
                                               <option value="Rekomendasi">Rekomendasi</option>
