--- a/users/users-prodi.html
+++ b/users/users-prodi.html
@@ -247,7 +247,7 @@
                            <a href="../ami/kts.html">KTS</a>
                         </li>
                         <li class="">
-                           <a href="../ami/siklus.html">Siklus</a>
+                           <a href="../ami/siklus.html">Periode</a>
                         </li>
 
                      </ul>
@@ -394,10 +394,10 @@
                                           </div>
                                           <div class="form-group mb-20">
                                              <div class="category-member">
-                                                <Label>Siklus :</Label>
+                                                <Label>Periode :</Label>
 
                                                 <select id="idSiklus" class="js-example-basic-single js-states form-control" >
-                                                   <option disabled value="">--Pilih Siklus--</option>
+                                                   <option disabled value="">--Pilih Periode--</option>
                                                 </select>
                                              </div>
                                           </div>
@@ -491,10 +491,10 @@
                                           </div>
                                           <div class="form-group mb-20">
                                              <div class="category-member">
-                                                <Label>Siklus :</Label>
+                                                <Label>Periode :</Label>
 
                                                 <select id="idSiklus-update" class="js-example-basic-single js-states form-control" >
-                                                   <option disabled value="">--Pilih Siklus--</option>
+                                                   <option disabled value="">--Pilih Periode--</option>
                                                 </select>
                                              </div>
                                           </div>
